k8s/imaging-namespace/imaging-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imaging-service-ingress
  namespace: imaging
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: api.gindho.com
    http:
      paths:
      - path: /imaging
        pathType: Prefix
        backend:
          service:
            name: imaging-service
            port:
              number: 8093
